variables de entorno

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 PORT=8080
+MONGODB_CNN=mongodb://marlon:1233891911@clustersynergy-shard-00-00.k3y8i.mongodb.net:27017,clustersynergy-shard-00-01.k3y8i.mongodb.net:27017,clustersynergy-shard-00-02.k3y8i.mongodb.net:27017/synergyDB?ssl=true&replicaSet=atlas-8rdym2-shard-0&authSource=admin&retryWrites=true&w=majority
